--- a/style.css
+++ b/style.css
@@ -1,60 +1,72 @@
 body {
-  background-image: url("img/git-back.jpg");
-  margin-left: 250px;
-  padding:auto;
-  height: 100%;
+  background-image: url("img/vim-back.jpg");
   background-repeat: no-repeat;
-  background-color: #9cb13e;
+  background-color: black;
+  margin: auto;
+  width: auto;
+  position: absolute;z-index: 1
 
 }
 #container {
-    margin-left: 250px
-  width: 100%;
-  margin-right: auto;
-  margin-left: auto;
-
+  margin-left: 150px;
 }
-/*#container  img {
-  height: 100%;--------ici pr plein ecran
-  background-repeat: no-repeat;
-  position: absolute; z-index: 1;
-}*/
 
-#title {
-  height: 100px;
-  margin-left: 200px;
-  margin-top: 280px;
-  display: inline-block;
-  color: black;
-  font-size: 3.8em;
-  font-weight: bold;
-  font-family: sans-serif;
-
-}
-table {
-  margin-top: 20px;
-  position: absolute; z-index: 2;
-  display: inline-block;
-  border: 1px solid white;
-  padding: 20px;
-
-}
-table td  {
-  display: inline-block;
-  color: white;
-  font-size: 0.9em;
-  font-weight: bold;
-  font-family: sans-serif;
-  padding: 5px;
-}
-#command_bar{
-  margin-top: 30px;
-}
-section {
-  margin-top: 70px;
-
+#accueil {
+  margin-top: 90px;
   color: white;
   font-size: 1.6em;
   font-weight: bold;
   font-family: sans-serif;
+}
+a {
+  text-decoration: none;
+  color: white;
+}
+
+#title {
+  height: 100px;
+  margin-left: 280px;
+  margin-top: 150px;
+  display: inline-block;
+  color:white;
+  font-size: 4.5em;
+  font-weight: bold;
+  font-family: sans-serif;
+}
+
+
+#command {
+  margin-top: 30px;
+  margin-left: 30px;
+
+}
+
+#commandtitre {
+  font-size: 2em;
+  color: white;
+  margin-left: 70px;
+  margin-top: 50px;
+  font-family: sans-serif;
+
+}
+#category {
+  font-size: 1.5em;
+  color: white;
+  margin-left: 70px;
+  margin-top: 30px;
+  font-family: sans-serif;
+
+}
+li {
+  line-height: 2;
+  font-size: 1.2em;
+  color: white;
+  font-family: sans-serif;
+  list-style: none;
+
+}
+span{
+  color: rgb(255, 197, 143);
+  font-weight: bold;
+  font-size: 1em;
 }
