--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ a {
 #commandtitre {
   font-size: 2em;
   color: white;
-  margin-left: 70px;
+  margin-left: 50px;
   margin-top: 50px;
   font-family: sans-serif;
 
@@ -57,12 +57,35 @@ a {
   font-family: sans-serif;
 
 }
+.columns {
+    width: 950px;
+    margin-top: 30px;
+	  -webkit-columns: 6;
+		-moz-columns: 6;
+		columns: 6;
+    -webkit-column-gap: 3em;
+    -moz-column-gap: 3em;
+    column-gap: 3em;
+    /*-webkit-column-rule: 0.2em dotted #777;
+    -moz-column-rule: 0.2em dotted #777;
+    column-rule: 0.2em dotted #777;*/
+    position: absolute;z-index: 2;
+
+}
+
 li {
-  line-height: 2;
+  /*line-height: 2;
   font-size: 1.2em;
   color: white;
   font-family: sans-serif;
-  list-style: none;
+  list-style: none;*/
+  color: white;
+  padding: 20px;
+  margin: 0;
+  display: inline-block;
+  width: 100%;
+  line-height: 1.5;
+
 
 }
 span{
